minor fixes to style, better display on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,8 @@ header {
   text-shadow: 2px 2px 2px black;
 }
 .overview {
+  height: 50vh;
+  overflow: scroll;
   margin-top: 10px;
   padding: 10px;
   padding-left: 40px;
@@ -27,7 +29,6 @@ header {
   border-radius: 10px;
   border: solid grey;
   box-shadow: 2px 2px 5px grey;
-  flex: 1;
 }
 
 .overview-list-item {
@@ -41,8 +42,8 @@ header {
   border: none;
   border-left: solid 3px transparent;
   border-radius: 25%;
-  position: sticky;
-  left: 100%;
+  position: absolute;
+  left: 80%;
   height: 30px;
   width: 30px;
   cursor: pointer;
